SLING-9989: migrate date formating to java.time API (#11)